--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="/goit-markup-hw-02/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,8 +12,8 @@
     <title>WebStudio</title>
 </head>
 <body>
- <header> 
-     
+ <header class="header-main"> 
+    <div class="container" >
     <a class="logo" href="/goit-markup-hw-02/index.html"><span class="logo-dizajn">Web</span>Studio </a>
     <nav class="navigation">
         <ul class="navigation-list">
@@ -28,45 +29,50 @@
             <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a class="address-phone" href="tel:48111111111">+48 111 111 111</a> 
             </address>
-     
+    </div>
 
 </header>  
 
  <main>
   <!--hero-->  
   <section class="hero">
-    <div class="hero-side">
+    <div class="container">
      <h1 class="main-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
      <button class="modal-btn" type="button">Zamów usługe</button>
     </div> 
   </section>  
   <!--Agencja-->
   <section class="agency">
+    <div class="container" >
      <ul class="agency-box">
          <li class="agency-box-box"><h3 class="header-three">LOREM IPSUM</h3>
-            <p class="description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
+            <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada</p></li>
          <li class="agency-box-box"><h3  class="header-three">LOREM IPSUM</h3>
-            <p class="description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
+            <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
          <li class="agency-box-box"><h3  class="header-three">LOREM IPSUM</h3>
-            <p class="description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
+            <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
          <li class="agency-box-box"><h3  class="header-three">LOREM IPSUM</h3>
-            <p class="description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
+            <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
      </ul> 
+    </div>
   </section>
   <!--portfolio-->
   <section class="portfolio">
+    <div class="container" >
     <h2 class="header-two">Czym sie zajmujemy</h2> 
     <ul class="portfolio-list">
         <li class="portfolio-list-item"><img class="portfolio-list-item-img" src="/goit-markup-hw-01/images/imgoone.jpg" alt="komputer" width="370" height="294" ></li>
         <li class="portfolio-list-item"><img class="portfolio-list-item-img" src="/goit-markup-hw-01/images/imgtwoo.jpg" alt="laptop" width="370" height="294" ></li>
         <li class="portfolio-list-item"><img class="portfolio-list-item-img" src="/goit-markup-hw-01/images/imgthreee.jpg" alt="tablet" width="370" height="294" ></li>
     </ul>
+    </div>
 </section>
 <!--kontakt-->
 <section class="contact">
+    <div class="container" >
     <h2 class="header-two">Nasz zespół</h2>
     <ul class="contact-list">
         <li class="contact-list-item"><img class="contact-list-item-img" src="/goit-markup-hw-01/images/imgfourr.jpg" alt="Product designer" width="270" height="260">
@@ -83,16 +89,19 @@
         <h3 class="header-three-contact">John Doe</h3>
         <p class="description-text-contact">UI Designer</p></li>
     </ul>
+    <div class="container" ></div>
 </section>
 </main>
 
  <footer class="endpage">
+    <div class="container" >
     <a class="logoend" href="/goit-markup-hw-02/index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
     <address class="address">
         m. Warszawa, Aleje Jerozolimskie 21 <br>
      <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
      <a class="address-phone" href="tel:48111111111">+48 111 111 111 </a> <br>
     </address>
+    </div>
 
 
 </footer> 
