--- a/portfolio.html
+++ b/portfolio.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-    <link rel="stylesheet" href="/goit-markup-hw-02/css/style.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <title>WebStudio</title>
 </head>
+
 <body>
-    
-    <header> 
+    <header class="header">
         <div class="container">
-        <a class="logo" href="/goit-markup-hw-02/index.html"><span class="logo-dizajn">Web</span>Studio </a>
-        <nav class="navigation">
-            <ul class="navigation-list">
-                <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="/goit-markup-hw-02/index.html">Agencja</a></li>
-                <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="/goit-markup-hw-02/portfolio.html">Portfolio</a></li>
-                <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="#">Kontakt</a></li>
-            </ul>
-        </nav>
-                <address class="address"> 
+            <p class="logo-one">
+                <a class="logo" href="/goit-markup-hw-03/index.html"><span class="logo-dizajn">Web</span>Studio </a>
+            </p>
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li class="navigation-list-item">
+                        <a class="navigation-list-link" href="/goit-markup-hw-03/index.html">Agencja</a>
+                    </li>
+                    <li class="navigation-list-item">
+                        <a class="navigation-list-link" href="/goit-markup-hw-03/portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="navigation-list-item">
+                        <a class="navigation-list-link" href="#">Kontakt</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="address">
                 <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="address-phone" href="tel:48111111111">+48 111 111 111</a> 
-                </address>
-        </div> 
-    
-    </header>  
+                <a class="address-phone" href="tel:48111111111">+48 111 111 111</a>
+            </div>
+        </div>
+    </header>
    
   
    <main>
@@ -88,7 +96,7 @@
     <footer class="endpage">
         <div class="container" >
 
-        <a class="logoend" href="/goit-markup-hw-02/index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
+        <a class="logoend" href="/goit-markup-hw-03/index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
         <address class="address">
             m. Warszawa, Aleje Jerozolimskie 21 <br>
          <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
