--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
  <header class="header"> 
     <div class="container">
     <p class="logo-one"> 
-        <a class="logo" href="/goit-markup-hw-03/index.html"><span class="logo-dizajn">Web</span>Studio </a> 
+        <a class="logo" href="index.html"><span class="logo-dizajn">Web</span>Studio </a> 
     </p>
     <nav class="navigation">
         <ul class="navigation-list">
             <li class="navigation-list-item">
-                <a class="navigation-list-link" href="/goit-markup-hw-03/index.html">Agencja</a></li>
+                <a class="navigation-list-link" href="index.html">Agencja</a></li>
             <li class="navigation-list-item">
-                <a class="navigation-list-link" href="/goit-markup-hw-03/portfolio.html">Portfolio</a></li>
+                <a class="navigation-list-link" href="portfolio.html">Portfolio</a></li>
             <li class="navigation-list-item">
                 <a class="navigation-list-link" href="#">Kontakt</a></li>
         </ul>
@@ -96,7 +96,7 @@
 
  <footer class="endpage">
     <div class="container" >
-    <a class="logoend" href="/goit-markup-hw-03/index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
+    <a class="logoend" href="index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
     <address class="address">
         m. Warszawa, Aleje Jerozolimskie 21 <br>
      <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
