--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     </section> 
 
     <!--9 images with description-->
-    <section>
+    <section class="section-btn">
         <div class="container">
         <ul class="main-list">
             <li class="main-list-item"><img class="main-list-img" src="/goit-markup-hw-02/images/imagesssportfolio/imagelaptop.jpg" alt="Technocrack" width="370" height="294">
