--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </section>
 <!--kontakt-->
 <section class="contact">
-    <div class="container" >
+    <div class="container">
     <h2 class="header-two">Nasz zespół</h2>
     <ul class="contact-list">
         <li class="contact-list-item"><img class="contact-list-item-img" src="/goit-markup-hw-01/images/imgfourr.jpg" alt="Product designer" width="270" height="260">
@@ -90,7 +90,7 @@
         <h3 class="header-three-contact">John Doe</h3>
         <p class="description-text-contact">UI Designer</p></li>
     </ul>
-    <div class="container" ></div>
+    </div>
 </section>
 </main>
 
